--- a/posts/gradientboosting/index.qmd
+++ b/posts/gradientboosting/index.qmd
@@ -132,7 +132,7 @@ However, due to its complexity, Gradient Boosting can be computationally expensi
 
 ## Python Implementation of Gradient Boosting
 
-Below is a Python implementation using the `scikit-learn` library for a regression problem. We will use the Boston Housing dataset as an example.
+Below is a Python implementation using the `scikit-learn` library for a regression problem. We will use the Boston Housing dataset as an example
 
 ```{python}
 #| code-fold: false
@@ -142,14 +142,11 @@ from sklearn.model_selection import train_test_split
 from sklearn.ensemble import GradientBoostingRegressor
 from sklearn.metrics import mean_squared_error
 
-# Load the Boston Housing dataset
-data_url = "http://lib.stat.cmu.edu/datasets/boston"
-raw_df = pd.read_csv(data_url, sep="\s+", skiprows=22, header=None)
-data = np.hstack([raw_df.values[::2, :], raw_df.values[1::2, :2]])
-target = raw_df.values[1::2, 2]
-
-X = data
-y = target
+# 1) Read the Kaggle CSV (one row per sample)
+df_raw = pd.read_csv("HousingData.csv")
+df = df_raw.dropna()
+X = df.drop(columns=['MEDV'])
+y = df['MEDV']
 
 # Split the data into training and test sets
 X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)
