--- a/posts/gradientboosting/index.qmd
+++ b/posts/gradientboosting/index.qmd
@@ -142,7 +142,7 @@ from sklearn.model_selection import train_test_split
 from sklearn.ensemble import GradientBoostingRegressor
 from sklearn.metrics import mean_squared_error
 
-# 1) Read the Kaggle CSV (one row per sample)
+# Read the data
 df_raw = pd.read_csv("HousingData.csv")
 df = df_raw.dropna()
 X = df.drop(columns=['MEDV'])
