--- a/posts/randomforest/index.qmd
+++ b/posts/randomforest/index.qmd
@@ -170,13 +170,10 @@ accuracy = accuracy_score(y_test, y_pred)
 print(f"Classification Accuracy: {accuracy}")
 
 # Regression Example: Boston Housing dataset
-data_url = "http://lib.stat.cmu.edu/datasets/boston"
-raw_df = pd.read_csv(data_url, sep="\s+", skiprows=22, header=None)
-data = np.hstack([raw_df.values[::2, :], raw_df.values[1::2, :2]])
-target = raw_df.values[1::2, 2]
-
-X = data
-y = target
+df_raw = pd.read_csv("HousingData.csv")
+df = df_raw.dropna()
+X = df.drop(columns=['MEDV'])
+y = df['MEDV']
 X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)
 
 # Initialize RandomForest Regressor
